--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .App {
    text-align: center;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   padding: 20px;
 }
