--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
    text-align: center;
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   padding: 20px;
+   background: #fff url(https://steamuserimages-a.akamaihd.net/ugc/950718995351241361/D107C1962EEE0313BF4F524E5D2854D52701664F/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false) center center/contain repeat;
+   background-color: #000000;
+   background-repeat: repeat;
+   background-size: auto;
 }
