--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,11 +1,41 @@
 .card{
-    background-color: rgb(126, 117, 117);
-    height: fit-content;
-    width: fit-content;
-    margin: 2px;
-    padding: 10px;
-
-}
-.cardImage{
+    color: whitesmoke;
+    backdrop-filter: blur(15px);
     width: 150px;
+    margin: 2rem;
+    padding: 1.5rem;
+    font-size: xx-small;
+    box-shadow: 1px 1px 22px 3px #000;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 2px solid whitesmoke;
+    transition: 0.5s;
+    
+}
+.card:hover{
+    box-shadow: 0px 1px 8px 1px #FFFAFA;
+}
+
+.cardTag{
+    margin: 0;
+    text-align: center;
+}
+
+.cardButton{
+    width: fit-content;
+    height: fit-content;
+    color: whitesmoke;
+    background-color: rgb(196, 41, 41);
+    transition: 0.5s;
+    border-radius: 5px;
+}
+.cardButton:hover{
+    box-shadow: 0px 0px 6px 0px #000;
+}
+
+.cardImage{
+    border-radius: 10px;
+    margin-top: 25px;
 }
