--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,7 +1,7 @@
 .cards{
-    width: auto;
-    height: auto;
-    background-color: rgb(82, 82, 82);
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    padding: 20px;
+    margin: 20px;
 }
