--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -32,7 +32,7 @@
     border-radius: 5px;
 }
 .cardButton:hover{
-    box-shadow: 0px 0px 6px 0px #000;
+    box-shadow: 0px 0px 6px 0px #ffffff;
 }
 
 .cardImage{
