--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,7 +1,7 @@
 .cards{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: baseline;
     padding: 20px;
     margin: 20px;
 }
